--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 
 	<head>
 
-		<link rel="stylesheet" type="text/css" href="../css/style.css">
-		<script type="text/javascript" src="../js/jquery-1.10.2.min.js"></script>
-		<script type="text/javascript" src="../js/jquery.scrollTo.js"></script>
+		<link rel="stylesheet" type="text/css" href="css/style.css">
+		<script type="text/javascript" src="js/jquery-1.10.2.min.js"></script>
+		<script type="text/javascript" src="js/jquery.scrollTo.js"></script>
 
 		<title>John Kim</title>
 		<div id="nav"> <!-- the block -->
