--- a/index.html
+++ b/index.html
@@ -28,42 +28,82 @@
 
 		<section class="bgwrapper"> <!-- bg image -->
 
+			<!-- carousel -->
+
+
 			<!-- HELLO PAGE -->
+			
 			<div id="hello" class="hellopage">
+				<!-- NEW BACKGROUND
 				<div class="container">
 					<h5>Hey, I'm</h5>
 					<h1>JOHN KIM</h1>
 					<div class="contacticons">
 					</div>
 				</div>
+			-->
 			</div>
 
+
 			<!-- ABOUT PAGE -->
+			
 			<div id="about" class="aboutpage">
 				<div class="container">
+					
 					<h3>WHO AM I?</h3>
-					<p>
-					<b>I&#39;m a student</b>
-					<br>
-					Pursuing a combined major in Business and Computer Science (BUCS), this distinctive program offered by the Sauder School of Business teaches both the business acumen and technical skills that allows me to be immersed and thrive in business and tech environments. Having just finished my second year, I am excited to be starting an 8 month co-op term in September!
-					<br>
-					<br>
-					<b>I&#39;m a musician</b>
-					<br>
-					Since I picked up my first pair of drumsticks 7 years ago, I haven&#39;t been able to put them down and, consequently, music has been a passion of mine ever since. I&#39;ve had the privilege of performing at small local cafes, to the largest Jazz Festival on the West Coast of Canada and I&#39;m able to continue this passion as a member of the UBC Jazz Ensemble.
-					<br>
-					<br>
-					<b>I&#39;m a discoverer</b>
-					<br>
-					I&#39;ve worked on the ground floor, looking through an oven full of pizzas to working on the 23rd floor, looking out to the neighbouring towers of downtown Vancouver. I&#39;m well used to the claustrophobia that can come with playing squash, but no matter how many times I go rock climbing, I can&#39;t resist the exhilarating feeling of hanging upside down.
-					<br>
-					<br>
+					<div class="row">
+
+						<div class="third pen">
+						</div>
+
+						<div class="third drums">
+						</div>
+
+						<div class="third binoculars">
+						</div>
+
+					</div>
+
+					<div class="row">
+						<span>
+						<div class="third text">
+							<p>
+							<b>I&#39;m a student</b>
+							<br>
+							<br>
+							Pursuing a combined major in Business and Computer Science (BUCS), this distinctive program offered by the Sauder School of Business teaches both the business acumen and technical skills that allows me to be immersed and thrive in business and tech environments. Having just finished my second year, I am excited to be starting an 8 month co-op term in September!
+							</p>
+						</div>
+					</span>
+
+						<div class="third text">
+							<p>
+							<b>I&#39;m a musician</b>
+							<br>
+							<br>
+							Since I picked up my first pair of drumsticks 7 years ago, I haven&#39;t been able to put them down and, consequently, music has been a passion of mine ever since. I&#39;ve had the privilege of performing at small local cafes, to the largest Jazz Festival on the West Coast of Canada and I&#39;m able to continue this passion as a member of the UBC Jazz Ensemble.
+							</p>
+						</div>
+
+						<div class="third text">
+							<p>
+							<b>I&#39;m a discoverer</b>
+							<br>
+							<br>
+							I&#39;ve worked on the ground floor, looking through an oven full of pizzas to working on the 23rd floor, looking out to the neighbouring towers of downtown Vancouver. I&#39;m well used to the claustrophobia that can come with playing squash, but no matter how many times I go rock climbing, I can&#39;t resist the exhilarating feeling of hanging upside down.
+							</p>
+						</div>
+					</div>
+					<!--
 					<b>Above all else,</b>
 					<br>
 					I am constantly seeking new experiences to meet new people and find new heights to which I can grow.			
 					</p>
+				-->
 				</div>
 			</div>
+
+
 		</section>
 
 		<!-- PORTFOLIO PAGE -->
@@ -91,7 +131,6 @@
 								<br>
 								<br>
 								<h4>My Website</h4>
-								<br>
 								<br>
 								<br>
 								<p>My very own website, showcasing the technical side of my life. Each line of code hand-pressed by yours truly, from the HTML, to the CSS, and even some of the JavaScript inbetween.</p>
@@ -144,7 +183,7 @@
 							<p>.<b>CSS</b></p>
 						</div>
 						<div class="technicalskill">
-							<p>&starf; &starf; &star; &star; &star;</p>
+							<p>&starf; &star; &star; &star; &star;</p>
 							<p>alert(<b>JavaScript</b>);</p>
 						</div>
 					</div>
@@ -170,17 +209,22 @@
 		<!-- CONTACT PAGE -->
 		<section id="contact" class="contactpage">
 			<div class="container">
-				<h3>CONTACT ME!</h3>
-				<p>If you have any questions or just feel the sudden urge to play squash and need a partner, feel free to drop me a line!</p>
+				<div class="column">
+					<h3>CONTACT ME!</h3>
+					<p>If you have any questions or just feel the sudden urge to play squash and need a partner, feel free to drop me a line!</p>
+				</div>
+
+				<!-- IMPLEMENT LATER
 				<div class="contacticons">
 				</div>
+				-->
 			</div>
 		</section>
 
 		<!-- FOOTER -->
 		<section class="footer">
 			<div class="container">
-				<p>Made with 100% all natural, FDA approved blood, sweat, and tears from yours truly.</p>
+				<p>Made by yours truly. 100% all natural, organic, and cage-free. May contain peanuts.</p>
 				<p>&#169; 2016 John Kim</p>
 			</div>
 		</section>
@@ -194,6 +238,7 @@
 			  });
 			});
 		</script>
+
 	</body>
 
 </html>
