--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 							<b>I&#39;m a discoverer</b>
 							<br>
 							<br>
-							I&#39;ve worked on the ground floor, looking through an oven full of pizzas to working on the 23rd floor, looking out to the neighbouring towers of downtown Vancouver. I&#39;m well used to the claustrophobia that can come with playing squash, but no matter how many times I go rock climbing, I can&#39;t resist the exhilarating feeling of hanging upside down.
+							I try to do it all. I&#39;ve worked on the ground floor, looking through an oven full of pizzas to working on the 23rd floor, looking out to the neighbouring towers of downtown Vancouver. I&#39;m well used to the claustrophobia that can come with playing squash, but no matter how many times I go rock climbing, I can&#39;t resist the exhilarating feeling of hanging upside down. I am always searching for my next adventure.
 							</p>
 						</div>
 					</div>
